rearranging menu and files

--- a/qdrant-landing/content/developer/00-dl.md
+++ b/qdrant-landing/content/developer/00-dl.md
@@ -1,7 +1,7 @@
 ---
 #Delimiter files are used to separate the list of documentation pages into sections.
-title: "Build with Qdrant"
+title: "Quick Links"
 type: delimiter
-weight: 4 # Change this weight to change order of sections
+weight: 1 # Change this weight to change order of sections
 sitemapExclude: True
 ---
